--- a/simple-server/src/package.json
+++ b/simple-server/src/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "express": "*"
+    "express": "*",
+    "axios": "1.4.0"
   },
   "scripts": {
     "start": "node index.js"
